--- a/documentation/Adamson.html
+++ b/documentation/Adamson.html
@@ -110,7 +110,7 @@
     <img src="typobold_logo_200.png" width="40pt" style=" filter: grayscale(100%);"/>
     <p class="center">Type specimen in Esperanto language<br/>
       DRM free content from FadedPage.com<br/>
-      set in Wittgenstein<br/></p>
+      set in Bentinck<br/></p>
   </div>
 
     <div class="head">    
