--- a/documentation/Dumas.html
+++ b/documentation/Dumas.html
@@ -111,7 +111,7 @@
         <img src="typobold_logo_200.png" width="40pt" style=" filter: grayscale(100%);"/>
         <p class="center">Type specimen in French language<br/>
           DRM free content from Project Gutenberg<br/>
-          set in Wittgenstein<br/></p>
+          set in Bentinck<br/></p>
       </div>
 
     <div class="head">    
