--- a/documentation/Brentano.html
+++ b/documentation/Brentano.html
@@ -98,7 +98,7 @@
         <img src="typobold_logo_200.png" width="40pt" style=" filter: grayscale(100%);"/>
         <p class="center">Type specimen in German language<br/>
           DRM free content from Project Gutenberg<br/>
-          set in Wittgenstein<br/></p>
+          set in Bentinck<br/></p>
       </div>
 
     <div class="head">    
