--- a/documentation/Endrődi.html
+++ b/documentation/Endrődi.html
@@ -112,7 +112,7 @@
         <img src="typobold_logo_200.png" width="40pt" style=" filter: grayscale(100%);"/>
         <p class="center">Type specimen in Hungarian language<br/>
           DRM free content from FadedPage.com<br/>
-          set in Wittgenstein<br/></p>
+          set in Bentinck<br/></p>
       </div>
 
     <div class="head">    
