--- a/documentation/Etik.html
+++ b/documentation/Etik.html
@@ -112,7 +112,7 @@
         <img src="typobold_logo_200.png" width="40pt" style=" filter: grayscale(100%);"/>
         <p class="center">Type specimen in Danish language<br/>
           DRM free content from Wittgenstein Project<br/>
-          set in Wittgenstein<br/></p>
+          set in Bentinck<br/></p>
       </div>
 
     <div class="head">    
