--- a/documentation/Woolf.html
+++ b/documentation/Woolf.html
@@ -108,7 +108,7 @@
         <img src="typobold_logo_200.png" width="40pt" style=" filter: grayscale(100%);"/>
         <p class="center">Type specimen in English language<br/>
           DRM free content from Project Gutenberg<br/>
-          set in Wittgenstein<br/></p>
+          set in Bentinck<br/></p>
       </div>
 
     <div class="head">    
